# hbrowser

./: .gitignore  CLAUDE.md  README.md  analyze_cprofile.py  mypy.ini  pyproject.toml
.claude/: settings.local.json
.claude/hooks/: finalize-python.sh
.github/workflows/: publish.yml
hbrowser/: __init__.py  beep.py  exceptions.py  notify.py
hbrowser/gallery/: driver_base.py  eh_driver.py  element_action.py  models.py
hbrowser/gallery/browser/: __init__.py  ban_handler.py  chrome_manager.py  factory.py  flaresolverr.py  proxy.py  proxy_rotator.py  tor.py  tor_manager.py
hbrowser/gallery/captcha/: __init__.py  constants.py  detector.py  manager.py  models.py  solver_interface.py
hbrowser/gallery/captcha/adapters/: twocaptcha_adapter.py
hbrowser/gallery/utils/: __init__.py  connection.py  log.py  platform.py  window.py
hvbrowser/: __init__.py  control_panel.py  hv.py  hv_battle.py  hv_battle_action_manager.py  hv_battle_buff_manager.py  hv_battle_defaults.py  hv_battle_item_provider.py  hv_battle_observer_pattern.py  hv_battle_ponychart.py  hv_battle_skill_manager.py  pause_controller.py
hvbrowser/hv_battle_ponychart_ml/: README.md  analyze_augmentations.py  analyze_distribution.py  compare_backbones.py  compare_crops.py  compare_pos_weight.py  compare_resolution.py  compare_resume_scratch.py  evaluate_holdout.py  inspect_checkpoint.py  label_images.py  learning_curve.py  model_spec.py  profile_dataloader.py  search_batch_lr.py  thresholds.json  train.py  weights.npz
hvbrowser/hv_battle_ponychart_ml/common/: __init__.py  constants.py  data.py  dataset.py  export.py  model.py  sampling.py  splitting.py  training.py
scripts/: rebuild-env.sh
src/hbrowser/: __init__.py  beep.py  browser.py  gallery.py  hv.py  hv_battle.py  hv_battle_buffmanager.py  hv_battle_item.py  hv_battle_itemprovider.py  hv_battle_log.py  hv_battle_ponychart.py  hv_battle_skillmanager.py
src/hbrowser/gallery/: README.md  __init__.py  driver_base.py  eh_driver.py  models.py
src/hbrowser/gallery/browser/: ban_handler.py  factory.py
src/hbrowser/gallery/captcha/: detector.py  manager.py  solver_interface.py
src/hbrowser/gallery/captcha/adapters/: twocaptcha_adapter.py
src/hbrowser/gallery/utils/: url.py  window.py
src/hvbrowser/: hv.py  hv_battle.py  hv_battle_action_manager.py  hv_battle_buff_manager.py  hv_battle_buffmanager.py  hv_battle_dashboard.py  hv_battle_item_provider.py  hv_battle_itemprovider.py  hv_battle_log.py  hv_battle_monster_status_manager.py  hv_battle_observer_pattern.py  hv_battle_ponychart.py  hv_battle_skill_manager.py  hv_battle_skillmanager.py  hv_battle_stat_provider.py  pause_controller.py
src/hvbrowser/hv_battle_ponychart_ml/: hog_multilabel.tflite  thresholds.json  weights.npz
