[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbrowser"
version = "0.23.6"
description = "A tool for browsing tasks on e-h/exh-websites."
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "webdriver-manager>=4.0.2",
    "fake-useragent>=2.2.0",
    "h2h-galleryinfo-parser>=0.2.2",
    "selenium>=4.41.0",
    "beautifulsoup4>=4.14.3",
    "hv-bie>=0.4.1",
    "2captcha-python>=2.0.5",
    "undetected-chromedriver>=3.5.5",
    "setuptools>=82.0.1",
    "ponychart-classifier>=0.3.12",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
publish = [
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/hbrowser"
Tracker = "https://github.com/Kuan-Lun/hbrowser/issues"

[tool.setuptools]
# Use automatic package discovery (PEP 621 recommended approach)
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hbrowser*", "hvbrowser*"]

[tool.setuptools.package-data]
"hbrowser" = ["py.typed"]
"hbrowser.gallery" = ["py.typed"]
"hbrowser.gallery.browser" = ["py.typed"]
"hbrowser.gallery.captcha" = ["py.typed"]
"hvbrowser" = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
