[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hbrowser"
version = "0.26.22"
description = "A tool for browsing tasks on e-h/exh-websites."
readme = "README.md"
authors = [{ name = "Kuan-Lun Wang" }]
license = { text = "GNU Affero General Public License v3" }
requires-python = ">=3.11,<3.15"
dependencies = [
    "2captcha-python>=2.0.6",
    "beautifulsoup4>=4.14.3",
    "fake-useragent>=2.2.0",
    "h2h-galleryinfo-parser>=0.2.2",
    "hv-bie>=0.5.2",
    "ponychart-classifier>=0.5.0",
    "zendriver>=0.15.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.10",
    "mypy>=1.20.0",
    "pymarkdownlnt>=0.9.36",
]

[project.urls]
Homepage = "https://github.com/Kuan-Lun/hbrowser"
Tracker = "https://github.com/Kuan-Lun/hbrowser/issues"

[tool.hatch.build.targets.wheel]
packages = ["hbrowser", "hvbrowser"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Mirror flake8's Black-compatible ignore set (see .vscode/settings.json).
# These pycodestyle rules conflict with Black's formatting choices.
extend-ignore = ["E203", "E226", "E501"]
